--- a/muservice/docker-compose.yml
+++ b/muservice/docker-compose.yml
@@ -11,17 +11,35 @@ services:
     ports:
       # The HTTP port
       - "80:80"
-      # The Web UI (enabled by --api.insecure=true)
+      # The Web UI (enabled by --api.insecure=true)S
       - "8080:8080"
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
+  postgres-account:
+    image: "postgres:alpine"
+    environment:
+      - POSTGRES_PASSWORD=password
+    ports:
+      - "5432:5432"
+    #   Set a volume for data and initial sql script
+    #   May configure initial db for future demo
+    volumes:
+      - "pgdata_account:/var/lib/postgresql/data"
+      # - ./init:/docker-entrypoint-initdb.d/
+    command: ["postgres", "-c", "log_statement=all"]
+  redis-account:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    volumes:
+      - "redisdata:/data"
   account:
     build:
       context: ./account
       target: builder
     image: account
-    env_file: .env.dev
+    env_file: ./account/.env.dev
     expose:
       - "8080"
     labels:
@@ -32,4 +50,10 @@ services:
     volumes:
       - ./account:/go/src/app
     # have to use $$ (double-dollar) so docker doesn't try to substitute a variable
+    depends_on:
+      - postgres-account
+      - redis-account
     command: reflex -r "\.go$$" -s -- sh -c "go run ./"
+volumes:
+  pgdata_account: 
+  redisdata:
